--- a/index.html
+++ b/index.html
@@ -639,26 +639,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="column right">
+                <div class="column right contact-right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form name="submit-to-google-sheet">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Name" name="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" placeholder="Email" name="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" placeholder="Subject" name="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="Message" required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
                         </div>
+                        <span id="msg"></span>
                     </form>
                 </div>
             </div>
