--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             </div>
                             <div class="edu-content">
                                 <div class="year">
-                                    2023 - running
+                                    2023 - 2025
                                 </div>
                                 <div class="content">
                                     Master In Frontend Developer
@@ -188,10 +188,9 @@
                             <i class="fa-brands fa-html5"></i>
                             <i class="fa-brands fa-css3-alt"></i>
                             <i class="fa-brands fa-js"></i>
-                            <!-- <i class="fa-solid fa-dollar-sign"></i> -->
                             <i class="fa-brands fa-sass"></i>
-                            <i class="fa-brands fa-php"></i>
                             <i class="ri-tailwind-css-fill"></i>
+                            <i class="ri-reactjs-fill"></i>
                         </div>
                     </div>
                 </div>
